mobile version completed

--- a/index.html
+++ b/index.html
@@ -5,32 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Single price grid component</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <h1>Necesito un h1 si o si</h1>
-    </header>
+    </header> -->
 
     <main class="main">
         <section class="section">
-            <article class="box">
+            <article class="box box--white">
                 <h2 class="box__title ">Join our community</h2>
                 <p class="box__subtitle">30-day, hassle-free money back guarantee</p>
-                <p class="box__text">Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+                <p class="box__text box__text--grey">Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
             </article>
             <article class="box box--dark-cyan">
-                <h2 class="box__title ">Monthly Subscription</h2>
+                <h2 class="box__title box__title--white ">Monthly Subscription</h2>
                 <p class="box__price">
-                    <span class="box__currency">&dollar;29</span>
+                    <span class="box__currency box__currency--big">29</span>
                     <span class="box__period">per month</span>
                 </p>
-                <p class="box__subtitle">Full access for less than <span class="box__currency">&dollar;1</span> a day</p>
+                <p class="box__text">Full access for less than <span class="box__currency">1</span> a day</p>
                 <a href="#" class="box_button">Sign Up</a>
             </article>
             <article class="box box--cyan">
-                <h2 class="box__title ">Why Us</h2>
+                <h2 class="box__title box__title--white">Why Us</h2>
                 <ul class="list">
                     <li class="list__item">
                         Tutorials by industry experts
